Added api validation and order checking near zip
